[project]
name = "pythonproject13"
version = "0.1.0"
description = ""
authors = [
    {name = "Суспицын Евгений",email = "evgen.es21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"

